# acri_ws

./: README.md
src/STM32_communication/: CMakeLists.txt  package.xml
src/STM32_communication/msg/: STM32_Status.msg  from_NUC.msg  to_NUC.msg
src/STM32_communication/scripts/: controller.py  enable_STM32.py  keyboard_control.py
src/STM32_communication/srv/: heartbeat.srv
src/acri_controller/: CMakeLists.txt  package.xml
src/acri_controller/msg/: State.msg  from_NUC.msg  to_NUC.msg
src/acri_controller/scripts/: MomentOfInertia_sysID.py  plotSystem.py  runController.py  velocity_controller_sysID_GUI.py
src/acri_controller/src/: ControlSystem.cpp  ControlSystem.h  ControlSystemServices.cpp  controller.hh  observerGain.py  qpas_sub_noblas.c  qpas_sub_noblas.h
src/acri_controller/srv/: Control.srv  ObserverInit.srv  System.srv  SystemObs.srv
src/acri_description/: CMakeLists.txt  package.xml
src/acri_description/meshes/: Rigid Treads v1.stl
src/acri_description/sdf/D435/: _d435.urdf.xacro
src/acri_description/sdf/acri_model/: model.config  model.sdf
src/acri_description/sdf/realsense_camera/: model.sdf
src/acri_description/urdf/: acri_camera_assembly.urdf  acri_model.urdf
src/acri_gazebo/: CMakeLists.txt  package.xml
src/acri_gazebo/launch/: acri_playground.launch  acri_test_1.launch  enable_cameras.launch  rviz_cameras.launch  spawn_acri.launch  spawn_acri_URDF.launch  spawn_realsense.launch  spawn_sdf.launch  tracked_vehicle_simple.launch
src/acri_gazebo/models/Spatial_Navigation_Unit/: model.config  model.sdf
src/acri_gazebo/models/acri_model_basic/: model.config  model.sdf
src/acri_gazebo/plugins/simple_tracked_vehicle_plugin_ROS/: SimpleTrackedVehiclePluginROS.cc  SimpleTrackedVehiclePluginROS.hh
src/acri_gazebo/plugins/tracked_vehicle_plugin_ROS/: TrackedVehiclePluginROS.cc  TrackedVehiclePluginROS.hh
src/acri_gazebo/scripts/: keyboard_control.py
src/acri_gazebo/worlds/: acri_test_1.world  camera_test_1.world  camera_test_2.world  camera_test_3.world  playground.world  tracked_vehicle_simple.world
src/octomap_mesh_converter/: CMakeLists.txt  INSTALLATION INSTRUCTIONS NOTES
src/octomap_mesh_converter/launch/: convert.launch  convert_to_SDF.launch
src/octomap_mesh_converter/scripts/: octomap_to_SDF.py  pointcloud_to_model_0.05.mlx  pointcloud_to_model_0.1.mlx
src/octomap_mesh_converter/simulation/: map.dae  map_nick.dae  octomap_to_sdf_07_08_2022__13_29_57_test.dae
src/octomap_mesh_converter/src/: octomap_to_mesh.cpp
src/octomap_mesh_converter/worlds/: blank_world.world
