<?xml version="1.0"?>
<package format="2">
  <name>acri_gazebo</name>
  <version>0.1.0</version>
  <description>Package which contains all components required to run the ACRI trackside robotic device.</description>

  <maintainer email="simmonsn2018@gmail.com">Nicholas Simmons</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib}" gazebo_media_path="${prefix}" />
  </export>
  
</package>
